# ZKret-Santa-Filecoin

./: Cargo.toml  README.md
src/: lib.rs
src/cli/: args.rs  commands.rs  mod.rs
src/crypto/: encryption.rs  keypair.rs  mod.rs  zk_proofs.rs
src/filecoin/: mod.rs  retrieval.rs  storage.rs
src/protocol/: mod.rs  phases.rs  state.rs
src/utils/: error.rs  mod.rs  serialization.rs
tests/: integration_tests.rs
