[package]
name = "zkret-santa-filecoin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A trustless Secret Santa protocol using zero-knowledge proofs and Filecoin storage"
license = "MIT"
repository = "https://github.com/yourusername/zkret-santa-filecoin"

[dependencies]
# Zero-knowledge proof libraries
ark-bn254 = { version = "0.5.0", features = ["r1cs", "std"] }
ark-ff = { version = "0.5.0", features = ["std"] }
ark-ec = { version = "0.5.0", features = ["std"] }
ark-serialize = { version = "0.5.0", features = ["std"] }
ark-std = { version = "0.5.0", features = ["std"] }
ark-groth16 = { version = "0.5.0", features = ["std"] }
ark-r1cs-std = { version = "0.5.0", features = ["std"] }
ark-relations = { version = "0.5.0", features = ["std"] }
ark-snark = "0.5.1"


# Cryptographic libraries
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha3 = "0.10"
rand = "0.8"

# Filecoin integration
filecoin-client = "0.2"
lotus-api = "0.1"
cid = "0.11"
multihash = "0.19"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI and async runtime
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "zkretctl"
path = "src/main.rs"
